# platformer_bevy_learning

./: Cargo.toml  dev.sh
assets/: map.ldtk  testmap.ldtk
src/: main.rs
src/client/: mod.rs
src/client/input/: mod.rs
src/debugging/: mod.rs
src/graphics/: mod.rs
src/graphics/camera/: mod.rs
src/server/: mod.rs
src/shared/: mod.rs
src/shared/assets/: mod.rs
src/simulation/: mod.rs
src/simulation/actor/: components.rs  mod.rs
src/simulation/world/: mod.rs
